name:                confluence-sync
version:             1.1.0.0
synopsis:            Tool for syncing static websites to confluence.
description:         Please see README.md
homepage:            http://github.com/githubuser/simple#readme
license:             MIT
license-file:        LICENSE
author:              Laurence Rouesnel
maintainer:          laurence@rouesnel.com
copyright:           2015 Laurence Rouesnel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Confluence.Sync.SyncTool
                     , Confluence.Sync.Content
                     , Confluence.Sync.Internal.AttachmentHash
                     , Confluence.Sync.Internal.RateLimiter
                     , Confluence.Sync.LocalSite
                     , Confluence.Sync.ReferenceResolver
                     , Confluence.Sync.PageNames
                     , Confluence.Sync.XmlRpc.Api
                     , Confluence.Sync.XmlRpc.Requests
                     , Confluence.Sync.XmlRpc.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , case-insensitive
                     , clock
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , HandsomeSoup
                     , haxr
                     , heredoc
                     , hxt
                     , interpolatedstring-perl6
                     , MissingH
                     , mtl
                     , pandoc
                     , rosezipper
                     , safe
                     , SafeSemaphore
                     , stm
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , url
  default-language:    Haskell2010

executable confluence-sync-tool
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , confluence-sync
                     , heredoc
                     , optparse-applicative
  default-language:    Haskell2010

test-suite confluence-sync-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , confluence-sync
                     , directory
                     , filepath
                     , HandsomeSoup
                     , hspec
                     , hxt
                     , interpolatedstring-perl6
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite confluence-sync-doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTests.hs
  build-depends:       base
                     , confluence-sync
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
